--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
     </div>
   
     <div style="float: left; width: 50%;">
-      
+       <p>¡Bienvenidos a mi portafolio personal!</p>
+      <p>Soy un apasionado de los números, las estadísticas y el análisis de datos. Con una Licenciatura en 
+        Matemáticas con Orientación en Estadística en la Universidad Nacional Autónoma de Honduras y experiencia laboral en el campo, me he especializado en transformar datos en conocimientos valiosos y soluciones impactantes.</p>
+      <p>Enfocado, tenaz y orientado a resultados, busco constantemente nuevos desafíos y oportunidades para crecer y 
+        aprender. Mis habilidades en análisis matemáticos y estadísticos, junto con mi experiencia en programación, 
+        me permiten abordar problemas complejos y brindar soluciones efectivas.</p>
+      <p>A través de este portafolio, compartiré mis proyectos destacados, experiencias laborales y habilidades 
+        técnicas, demostrando mi capacidad para convertir datos en información significativa y proporcionar perspectivas valiosas.</p>
+      <p>¡Espero que disfrutes explorando mi portafolio y descubriendo cómo el análisis de datos puede impulsar el éxito empresarial
+         y la toma de decisiones estratégicas!</p>
+
   
-      <p>¡Bienvenidos a mi portafolio personal!
-        Soy un apasionado de los números, las estadísticas y el análisis de datos. Con una Licenciatura en Matemáticas con Orientación en 
-        Estadística en la Univeridad Nacional Autonoma de Honduras y experiencia laboral en el campo, me he especializado en transformar datos en conocimientos valiosos y soluciones impactantes.
-        Enfocado, tenaz y orientado a resultados, busco constantemente nuevos desafíos y oportunidades para crecer y aprender. Mis habilidades en análisis matemáticos y estadísticos,
-         junto con mi experiencia en programación, me permiten abordar problemas complejos y brindar soluciones efectivas.
-        A través de este portafolio, compartiré mis proyectos destacados, experiencias laborales y habilidades técnicas, demostrando mi capacidad para convertir datos en información significativa y proporcionar perspectivas valiosas.
-        ¡Espero que disfrutes explorando mi portafolio y descubriendo cómo el análisis de datos puede impulsar el éxito empresarial y la toma de decisiones estratégicas!</p>
-    </div>
+      </div>
   </section>
   
   
