--- a/proyecto1.html
+++ b/proyecto1.html
@@ -18,13 +18,10 @@
 
   <section id="project-details">
     <h2>Descripción</h2>
-    <p>En este proyecto, se busca realizar una integración de diversas fuentes de datos para resumir la información 
-        clave a través de mapas y gráficos en dos informes distintos. En el primer informe, se abordarán los indicadores
-         de población por país y continente, mientras que en el segundo informe se trabajará en indicadores de esperanza 
-         de vida y mortalidad infantil. A partir de estos análisis, examinaremos varias categorías, como grupos de 
-         continentes, grupos de población, grupos de esperanza de vida, grupos de mortalidad infantil y la relación
-          entre esperanza de vida y mortalidad infantil.
-    </p>
+    <p> En este proyecto, se ha llevado a cabo la integración de diversas fuentes de datos para proporcionar información clave a través de mapas interactivos y gráficos en dos reportes distintos. El objetivo principal es analizar y visualizar indicadores de población, esperanza de vida y mortalidad infantil a nivel mundial.</p>
+    <p>El primer reporte se enfoca en los indicadores de población por país y continentes, brindando una visión general de forma sencilla. Posteriormente, se profundiza en indicadores más complejos como la esperanza de vida y la mortalidad infantil, permitiendo su análisis por categorías de grupos de continentes, grupos de población y rangos de esperanza de vida.</p>
+    <p>A través de la integración de datos y el uso de gráficos interactivos, se busca establecer relaciones significativas entre la esperanza de vida y la mortalidad infantil. Esto permitirá comprender mejor los factores que influyen en la calidad de vida de las poblaciones y tomar decisiones informadas en materia de políticas públicas y salud.</p>
+    <p>Explora este proyecto y descubre cómo la integración de datos y la visualización de indicadores mundiales pueden proporcionar valiosos conocimientos sobre la población y la salud en diferentes regiones del mundo. A través de mapas interactivos y gráficos dinámicos, podrás explorar las relaciones entre la esperanza de vida y la mortalidad infantil, y obtener una perspectiva global de los desafíos y oportunidades en este ámbito.</p>
     <h4>Tecnologias usadas</h4>
     <p>Power Bi
     </p>
