--- a/proyecto2.html
+++ b/proyecto2.html
@@ -25,9 +25,9 @@
   
   <section id="project-details">
         <h2>Descripción</h2>
-        <p>
-          Los análisis espectrométricos son métodos utilizados en química analítica para determinar la concentración química de una muestra. Se aplican en diversos campos, incluyendo la arqueología, donde resulta importante conocer la composición de elementos culturales. Sin embargo, los análisis químicos directos pueden ser costosos. Por ello, se busca predecir la concentración de compuestos químicos mediante la energía correspondiente a su frecuencia en análisis espectrométricos. No obstante, se enfrenta el desafío de contar con un número menor de muestras en comparación con los predictores. Para superar esta limitación, se utiliza la regularización, en particular los métodos de regresión Ridge y Lasso. Estas técnicas reducen la complejidad del modelo, disminuyendo la varianza y permitiendo una interpretación más sencilla del mismo. De esta manera, se logra una mejor
-          predicción de la composición de vasijas arqueológicas en yacimientos, optimizando recursos y costos</p>
+        <p>Los análisis espectrométricos son métodos ampliamente utilizados en química analítica para determinar la concentración química de una muestra. Su aplicación abarca diversos campos, incluyendo la arqueología, donde es fundamental conocer la composición de elementos culturales. Sin embargo, los análisis químicos directos pueden resultar costosos y requieren una cantidad considerable de muestras. Por esta razón, se busca predecir la concentración de compuestos químicos utilizando la energía asociada a su frecuencia en los análisis espectrométricos.</p>
+        <p>No obstante, surge el desafío de disponer de un número limitado de muestras en comparación con la cantidad de predictores. Para superar esta limitación, se recurre a técnicas de regularización, en particular los métodos de regresión Ridge y Lasso. Estas técnicas permiten reducir la complejidad del modelo, disminuyendo la varianza y facilitando su interpretación. Como resultado, se logra una mejor predicción de la composición de vasijas arqueológicas en yacimientos, optimizando recursos y reduciendo costos.</p>
+        <p>Sumérgete en este proyecto y descubre cómo el análisis espectrométrico y la regularización pueden revelar valiosos conocimientos en el campo de la arqueología y la química analítica.</p>
         <h4>Tecnologias usadas</h4>
         Lenguaje estadístico R
   </section>
