--- a/proyecto3.html
+++ b/proyecto3.html
@@ -21,15 +21,15 @@
       <hr>
     </div>
   </section>
+  
   <section id="project-details">
     <h2>Descripción</h2>
-    <p>En este proyecto, se realizaron evaluaciones para analizar el desempeño de los colaboradores de la compañía 
-        Sku-Don en diferentes aspectos. Se evaluó el desempeño promedio por departamento, permitiéndonos conocer el 
-        rendimiento de cada área específica. Además, se calculó el promedio de desempeño por género, brindándonos 
-        información sobre las diferencias en el rendimiento entre hombres y mujeres. Asimismo, se evaluó el 
-        desempeño promedio de los colaboradores en relación con sus respectivos jefes, lo que nos permitió 
-        analizar la influencia de la supervisión directa en el rendimiento de los empleados. Estos análisis nos proporcionaron una visión detallada del desempeño de los colaboradores en Sku-Don, destacando las áreas de mejora y fortaleza en términos de evaluaciones de desempeño.
-    </p>
+    <p> En este proyecto, se busca visualizar y analizar los indicadores clave de colaboradores,
+       sueldos y desempeño en un reporte de recursos humanos para la Compañía Sku-Don.
+    Para lograrlo, se realizará un análisis detallado de los empleados utilizando una tabla que nos permitirá obtener información relevante. Mediante el uso de categorías como departamento, género, edad, sueldo y desempeño, se podrá conocer el total de empleados, promedios generales, costos totales y evaluaciones, entre otros aspectos importantes.</p>
+    <p>Además, se utilizarán técnicas de modelado de datos y se aplicarán expresiones de análisis de datos para obtener información relevante y significativa. A través de la creación de gráficos y visualizaciones interactivas, se llevará a cabo un análisis exhaustivo de los recursos humanos de la compañía, brindando una visión clara y concisa de la situación actual.</p>
+    <p>Sumérgete en este proyecto y descubre cómo la visualización de indicadores de recursos humanos puede ofrecer valiosos conocimientos sobre el personal de una organización. A través de gráficos interactivos y herramientas de análisis, podrás explorar y comprender mejor la estructura y el rendimiento de los 
+      colaboradores en la Compañía Sku-Don.</p>
     <h4>Tecnologias usadas</h4>
     <p>Power Bi
     </p>
