--- a/index.html
+++ b/index.html
@@ -163,10 +163,18 @@
       <li>
         <div class="project-container">
           <div class="image-container">
-            <img src="img1.jpg" alt="Proyecto 1">
+            <a href="proyecto5.html" class="image-link">
+                <img src="pyt5.jpg" alt="Proyecto 5">
+                <div class="overlay">
+                  <p>DASHBOARD<br>
+                    Proyecto de Reporte Interactivo de Finanzas Personales
+                  </p>
+              </div>
+            </a>
           </div>
         </div>
       </li>
+
 
       <li>
         <div class="project-container">
