--- a/index.html
+++ b/index.html
@@ -154,9 +154,15 @@
       <li>
         <div class="project-container">
           <div class="image-container">
-            <img src="img1.jpg" alt="Proyecto 1">
+            <a href="proyecto4.html" class="image-link">
+                <img src="Pyt4.JPG" alt="Proyecto 4">
+                <div class="overlay">
+                  <p>BASE DE DATOS<br>
+                    Control de Libros en una Base de Datos
+                  </p>
+              </div>
+            </a>
           </div>
-          
         </div>
       </li>
 
