--- a/proyecto4.html
+++ b/proyecto4.html
@@ -46,6 +46,7 @@
     <p> A continuación, se muestran diferentes tablas realizadas en la base de datos.</p>
     
     <div class="center">Tabla Autor</div>
+    
     <div class="center">
         <table border=1>
             <tr>
@@ -207,7 +208,8 @@
           </code>
         </pre> 
       </div>    
-  <div class="center">
+  
+    <div class="text-align:center">
     <table border="1">
       <tr>
         <td bgcolor="silver" class="medium">primer_nombre</td>
