--- a/proyecto4.html
+++ b/proyecto4.html
@@ -209,7 +209,7 @@
         </pre> 
       </div>    
   
-    <div class="text-align:center">
+    <div class="center">
     <table border="1">
       <tr>
         <td bgcolor="silver" class="medium">primer_nombre</td>
