--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="hero-text">
       <h1>Grevy Rápalo</h1>
-      <h2>Analista de Datos y Estadística</h2>
+      <h2> Matemático Estadista y Analista de Datos </h2>
     </div>
   </section>
   
@@ -62,8 +62,7 @@
         me permiten abordar problemas complejos y brindar soluciones efectivas.</p>
       <p>A través de este portafolio, compartiré mis proyectos destacados, experiencias laborales y habilidades 
         técnicas, demostrando mi capacidad para convertir datos en información significativa y proporcionar perspectivas valiosas.</p>
-      <p>¡Espero que disfrutes explorando mi portafolio y descubriendo cómo el análisis de datos puede impulsar el éxito empresarial
-         y la toma de decisiones estratégicas!</p>
+      <p>¡Espero que disfrutes explorando mi portafolio y descubriendo cómo el análisis de datos puede ser valioso para la toma de decisiones estratégicas en diversos contextos!</p>
 
   
       </div>
