--- a/proyecto5.html
+++ b/proyecto5.html
@@ -17,13 +17,13 @@
   </header>
   <section>
     <div style="text-align: center;">
-      <h2>Proyecto de Reporte Interactivo de Finanzas Personales</h2>
+      <h2>Proyecto de Reporte Interactivo de Finanzas</h2>
       <hr>
     </div>
   </section>
   <section id="project-details">
     <h2>Descripción</h2>
-    <p> En este proyecto, se ha desarrollado un reporte interactivo de finanzas personales que permite tener
+    <p> En este proyecto, se ha desarrollado un reporte interactivo de finanzas "personales" que permite tener
          un control completo sobre los ingresos, gastos y metas financieras. El objetivo principal es proporcionar 
          una herramienta intuitiva y sencilla de utilizar para visualizar los montos de ingresos, gastos, utilidades
           y saldo disponible en tiempo real. Además, se brinda la posibilidad de establecer metas de ingresos, 
