--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <img src="pyt5.jpg" alt="Proyecto 5">
                 <div class="overlay">
                   <p>DASHBOARD<br>
-                    Proyecto de Reporte Interactivo de Finanzas Personales
+                    Proyecto de Reporte Interactivo de Finanzas
                   </p>
               </div>
             </a>
