--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
         <p> Mi experiencia incluye la utilización de herramientas de programación como Python, R, y SQL, así como el manejo de sistemas 
         de información geográfica (SIG) para el análisis y la visualización de datos geoespaciales. Me destaco en 
-        la creación de soluciones efectivas mediante la modelización de datos y el desarrollo de dashboards 
+        la creación de soluciones efectivas mediante el modelado de datos y el desarrollo de dashboards 
         interactivos que proporcionan información clave para distintos sectores.
         
         <p> En este portafolio encontrarás proyectos que demuestran mi capacidad para aplicar técnicas avanzadas 
