--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   
     <div style="float: left; width: 50%;">
        <p>¡Bienvenidos a mi portafolio personal!</p>
-        <p> Soy un profesional apasionado por el análisis de datos, con una sólida formación académica en Matemáticas y Estadística, 
-        y actualmente cursando una Maestría en Ciencias Actuariales y Financieras en la Universidad Nacional Autónoma de Honduras (UNAH).
+        <p> Soy un profesional apasionado por el análisis de datos, Con una Licenciatura en Matemáticas con Orientación en Estadística en la Universidad Nacional Autónoma de Honduras (UNAH), 
+        y actualmente cursando una Maestría en Ciencias Actuariales y Financieras (UNAH).
         A lo largo de mi carrera, me he especializado en transformar grandes volúmenes de datos en información útil para la toma de decisiones estratégicas.
         
         <p> Mi experiencia incluye la utilización de herramientas de programación como Python, R, y SQL, así como el manejo de sistemas 
