--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="hero-text">
       <h1>Grevy Rápalo</h1>
-      <h2> Matemático Estadista y Analista de Datos </h2>
+      <h2> Científico de Datos, Modelación Actuarial y SIG </h2>
     </div>
   </section>
   
