--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <a href="proyecto4.html" class="image-link">
                         <img src="Pyt4.JPG" alt="Proyecto 4">
                         <div class="overlay">
-                            <p>BASE DE DATOS<br> Control de Libros en una Base de Datos</p>
+                            <p>BASE DE DATOS<br> Catalogo Geoespacial y en Aplicaciones de control interno SINIT </p>
                         </div>
                     </a>
                 </div>
