--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <li>
             <div class="project-container">
                 <div class="image-container">
-                    <a href="proyecto4.html" class="image-link">
+                    <!--<a href="proyecto4.html" class="image-link">-->
                         <img src="Pyt4.JPG" alt="Proyecto 4">
                         <div class="overlay">
                             <p>BASE DE DATOS<br> Catalogo Geoespacial y en Aplicaciones de control interno SINIT </p>
