--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
         display: inline-block;
         margin: 10px;
     }
+  
+  .image-container img {
+    width: 100%;  /* Hace que todas las imágenes ocupen el ancho completo de su contenedor */
+    height: auto; /* Mantiene la proporción de la imagen */
+    object-fit: cover; /* Ajusta la imagen sin deformarla */
+}
+
 </style>
 
 
