--- a/index.html
+++ b/index.html
@@ -262,20 +262,20 @@
             </div>
         </li>
 
-       
-
-        <li>
+       <li>
             <div class="project-container">
                 <div class="image-container">
-                    <a href="proyecto10.html" class="image-link">
-                        <img src="pyt10.jpg" alt="Proyecto 10">
+                    <a href="proyecto3.html" class="image-link">
+                        <img src="pyt3.jpg" alt="Proyecto 3">
                         <div class="overlay">
-                            <p>Reducción de Dimensiones con PCA (Estudio)</p>
+                            <p>DASHBOARD<br> Reporte de Recursos Humanos Empresa Sku-Don</p>
                         </div>
                     </a>
                 </div>
             </div>
         </li>
+
+       
 
         <li>
               <div class="project-container">
@@ -311,6 +311,19 @@
                         <img src="pyt3.jpg" alt="Proyecto 3">
                         <div class="overlay">
                             <p>DASHBOARD<br> Reporte de Recursos Humanos Empresa Sku-Don</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </li>
+
+       <li>
+            <div class="project-container">
+                <div class="image-container">
+                    <a href="proyecto10.html" class="image-link">
+                        <img src="pyt10.jpg" alt="Proyecto 10">
+                        <div class="overlay">
+                            <p>Reducción de Dimensiones con PCA (Estudio)</p>
                         </div>
                     </a>
                 </div>
